--- a/Web/Manage/View/CMBC/bindPayment.html
+++ b/Web/Manage/View/CMBC/bindPayment.html
@@ -48,13 +48,14 @@
                         <div class="form_item clearfix">
                         <label class="item-label">商户类别：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="industryId"  value="" class="textBox" placeholder="" data-required="true" />
+                        <input type="text" id="industryId" name="industryId"  value="" class="textBox" placeholder="" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">接入类型：    	<i>*</i>    	</label>
                           <div class="controls">
-                        <select data-required="true" name="operateType">
+
+                        <select data-required="true" name="operateType" >
                             <option value="">--请选择--</option>
                             <option value="1" >间联</option>
                             <option value="2" >直联</option>
@@ -65,19 +66,15 @@
                       <div class="form_item clearfix">
                         <label class="item-label">日限额：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="dayLimit"  value="" class="textBox" placeholder="" data-required="true" />
+                        <input type="text" id="" name="dayLimit"  value="" class="textBox" placeholder="单位为分，例：5万元则填5000000" data-required="true" />
                            </div>
                       </div>
-                      <span>单位为分，例：5万元则填5000000</span>
-
                       <div class="form_item clearfix">
                         <label class="item-label">月限额：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="monthLimit"  value="" class="textBox" placeholder="" data-required="true" />
+                        <input type="text" id="" name="monthLimit"  value="" class="textBox" placeholder="单位为分，例：5万元则填5000000" data-required="true" />
                            </div>
                       </div>
-                      <span>单位为分，例：5万元则填5000000</span>
-
                       <div class="form_item clearfix">
                         <label class="item-label">固定比例费率：    	<i>*</i>    	</label>
                            <div class="controls">
