--- a/Web/Manage/View/CMBC/register.html
+++ b/Web/Manage/View/CMBC/register.html
@@ -26,7 +26,7 @@
 
                       <div class="boundForm">
               		  <form data-validate="parsley"  name="RegisterStore" action="RegisterStore" id="form_store_edit" enctype="application/x-www-form-urlencoded" method="POST" class="form-horizontal">
-
+						<input type="hidden" name="user_id" value="<?php echo $current_user_id ?>">
                         <label class="form_tit">商户注册</label>
 
                       <div class="form_item clearfix">
